# kiebex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  image.yml  opencode.yml  review-app-teardown.yml
__tests__/api/: admin-style-by-id.route.test.ts  auth.route.test.ts  (+7 more)
argocd/: review-apps-appset.yml
backend/: Cargo.toml  README.md
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  observability.rs  state.rs
backend/crates/api/src/models/: catalog.rs  health.rs
backend/crates/api/src/repositories/: catalog.rs
backend/crates/api/src/routes/: beer_styles.rs  health.rs  metrics.rs  mod.rs
contract-tests/: README.md  assert.ts  fixtures.ts  http.ts  normalize.ts  parity.ts  run.ts  select.ts  types.ts
docs/: api-contract.md
e2e/: admin-smoke.spec.ts  auth-recovery.spec.ts  auth.spec.ts  contribution-moderation.spec.ts  directory.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  smoke.spec.ts
grafana-dashboards/: kiebex.json  kiel-beer-index.json
integration-tests/: auth.ts  helpers.ts  register-server-only.mjs  routes.ts  run.ts
manifests/: deployment.yml  ingress.yml  kiebex-sealed-secret.yml  migrate.yml  namespace.yml  postgres-sealed-secret.yml  postgres.yml  service.yml
prisma/: schema.prisma  seed-admin.mjs  seed.ts
scripts/: capture-directory-query-sql.ts  explain-directory-queries.ts  local-route-switch.mjs  run-contract-ci.mjs  start-standalone.mjs
src/: instrumentation.ts
test/: README.md  database-reset.ts  index.ts
(+549 files in other folders)
