[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros", "json", "matched-path", "query", "tokio", "http1"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
chrono = { version = "0.4.44", features = ["serde", "clock"] }
dotenvy = "0.15.7"
garde = { version = "0.22.1", features = ["derive"] }
hex = "0.4.3"
lettre = { version = "0.11.21", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rand = "0.10.1"
scrypt = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "compression-full", "sensitive-headers"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["serde", "v7", "fast-rng"] }

[dev-dependencies]
